# imdb

./: .env  .env-dev  .gitignore  README.md  docker-compose.yml  pyproject.toml
compose/imdb/: Dockerfile  entrypoint  entrypoint.sh  start  start.sh
database/: create_imdb.sql  insert_imdb.sql
imdb/: db.py  init_db.py  main.py  routes.py  settings.py  views.py
part_2/: part2.sql
